--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@ f4fce3 --limeLight;
   --gray-medium: #495057;
   --gray-light: #ced4da;
 }
+body {
+  background-color: red !important;
+}
 
 * {
   margin: 0;
